--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ Navigation bar code here
         <!--ADD bootstrap classes to contact_1 div -->
         <div class="contact_1 col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <a href="mailto:tejasghodture@gmail.com?Subject=Hi">
-                <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;tejasghodturegmailid@gmail.com</h5>
+                <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;tejasghodture@gmail.com</h5>
             </a>
 
-            <a href="#">
-                <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;myinstagramid</h5>
+            <a href="https://www.instagram.com/tejasghodture/">
+                <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;Follow me on Instagram</h5>
             </a>
         </div>
 
